fix layout issues in firefox

--- a/app/src/components/Nav/NavLayout.scss
+++ b/app/src/components/Nav/NavLayout.scss
@@ -1,4 +1,7 @@
 
+.navbar{
+    min-height: 4rem;
+}
 
 .navbar:not([class*=is-]) .navbar-burger span
 {
