--- a/app/src/features/Layout/components/LayoutLayout.scss
+++ b/app/src/features/Layout/components/LayoutLayout.scss
@@ -18,4 +18,9 @@
 
     width: 100%;
     height: 100%;
+
+    .hero-body{
+        max-height: calc(100% - 4rem)
+    }
+
 }
